Initializing script && some corrections/cleaning

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,5 +20,6 @@
   </head>
   <body style="background-color:#141414">
     <div id="app"></div>
+    <!-- build files will be auto injected -->
   </body>
 </html>
